--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -37,7 +37,11 @@ jobs:
     #  run: dotnet test
 
     - name: Restore the application
-      run: msbuild $env:Solution_Name /t:rebuild /p:Configuration=$env:Configuration
+      run: msbuild $env:Solution_Name /t:Restore /p:Configuration=$env:Configuration
       env:
         Configuration: ${{ matrix.configuration }}
 
+    - name: Build the application
+      run: msbuild $env:Solution_Name /t:rebuild /p:Configuration=$env:Configuration
+      env:
+        Configuration: ${{ matrix.configuration }}
