--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -34,6 +34,10 @@ jobs:
     - name: Setup MSBuild.exe
       uses: microsoft/setup-msbuild@v1.0.2
 
+    - name: Dotnet restore
+      run: dotnet restore
+      working-directory: Airway\
+
     - name: Execute unit tests
       run: dotnet test
     
