--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -38,8 +38,8 @@ jobs:
       env:
         Configuration: ${{ matrix.configuration }}
 
-    - name: Restore dotnet
-      run: dotnet restore Airway\AirwayUnitTest\
+    #- name: Restore dotnet
+    #  run: dotnet restore Airway\AirwayUnitTest\
 
     #- name: Execute unit tests
     #  run: dotnet test Airway\AirwayUnitTest\AirwayUnitTest.csproj --no-build --verbosity normal /p:CollectCoverage=true /p:CoverletOutputFormat=opencover
@@ -64,3 +64,17 @@ jobs:
         release_name: Release ${{ github.ref }}
         draft: false
         prerelease: false
+
+    - uses: actions/upload-release-asset@v1.0.1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: D:\a\airway\airway\Airway\Airway\bin\Release\Airway.exe
+        asset_name: Airway.exe
+
+    - uses: eregon/publish-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        release_id: ${{ steps.create_release.outputs.id }}
