update: upload artifact in CI, fix path

--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -58,7 +58,13 @@ jobs:
       env:
         Configuration: ${{ matrix.configuration }}
 
+    name: Archive exe artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: Airway.exe
+          path: Airway/Airway/bin/Release/Airway.exe
+
     - uses: ncipollo/release-action@v1
       with:
-        artifacts: "Airway\Airway\bin\Release\Airway.exe"
+        artifacts: "Airway.exe"
         #bodyFile: "body.md"
