--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -58,7 +58,7 @@ jobs:
       env:
         Configuration: ${{ matrix.configuration }}
 
-    name: Archive exe artifact
+    - name: Archive exe artifact
       uses: actions/upload-artifact@v3
       with:
         name: Airway.exe
