--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -29,6 +29,14 @@ jobs:
       with:
         fetch-depth: 0
 
+    - name: Set env
+      run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+
+    - name: Test
+      run: |
+        echo $RELEASE_VERSION
+        echo ${{ env.RELEASE_VERSION }}
+
     - name: Install .NET Core
       uses: actions/setup-dotnet@v3
       with:
@@ -61,6 +69,7 @@ jobs:
     - name: Archive exe artifact
       uses: actions/upload-artifact@v3
       with:
+        tag: ${{ env.RELEASE_VERSION }}
         name: Airway
         path: Airway/Airway/bin/Release/Airway.exe
 
