fix: release pipeline

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,12 +1,11 @@
 name: Airway release builder
 
 on:
-  push:
+  create:
     tags:
       - '*'
 
 jobs:
-  #do_release:
     strategy:
       matrix:
         configuration: [Release]
