--- a/.github/workflows/any.yml
+++ b/.github/workflows/any.yml
@@ -3,8 +3,12 @@ name: Airway commit builder
 on:
   push:
     branches: [ "master" ]
+    tags-ignore:
+      - '**'
   pull_request:
     branches: [ "master" ]
+    tags-ignore:
+      - '**'
 
 jobs:
   build:
