--- a/.github/workflows/any.yml
+++ b/.github/workflows/any.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: windows-latest
 
     env:
-      Solution_Name: Airway\Airway.sln
+      Solution_Name: src\Airway.sln
 
     steps:
     - name: Checkout
